Finalizacion de sucursal_empresa y continuacion de persona

--- a/app/views/about/admon.html.erb
+++ b/app/views/about/admon.html.erb
@@ -9,7 +9,7 @@
 					<div class="col-xs-3 col-md-3 col-sm-3">
 						<ul class="ca-menu">
 							<li>
-		                        <a href="#">
+		                        <a href="<%= personas_path %>">
 		                            <span class="ca-icon"><i class="fa fa-user"></i></span>
 		                            <div class="ca-content">
 		                                <h2 class="ca-main">Personas</h2>
@@ -18,7 +18,7 @@
 		                        </a>							
 							</li>
 							<li>
-		                        <a href="#">
+		                        <a href="<%= empresas_path %>">
 		                            <span class="ca-icon"><i class="fa fa-home"></i></span>
 		                            <div class="ca-content">
 		                                <h2 class="ca-main">Empresas</h2>
@@ -27,7 +27,7 @@
 		                        </a>							
 							</li>
 							<li>
-		                        <a href="#">
+		                        <a href="<%= sucursal_empresas_path %>">
 		                            <span class="ca-icon"><i class="fa fa-home"></i></span>
 		                            <div class="ca-content">
 		                                <h2 class="ca-main">Sucursales</h2>
@@ -58,7 +58,7 @@
 		                            <span class="ca-icon"><i class="fa fa-globe"></i></span>
 		                            <div class="ca-content">
 		                                <h2 class="ca-main">Entidad Territorial</h2>
-		                                <h3 class="ca-sub">Datos Países, Ciudades...</h3>
+		                                <h3 class="ca-sub">Países, Ciudades...</h3>
 		                            </div>
 		                        </a>							
 							</li>
@@ -121,11 +121,11 @@
 		                        </a>
 							</li>						
 							<li>
-		                        <a href="#">
+		                        <a href="<%= vehiculos_path %>">
 		                            <span class="ca-icon"><i class="fa fa-plane"></i></span>
 		                            <div class="ca-content">
-		                                <h2 class="ca-main">Aeronaves</h2>
-		                                <h3 class="ca-sub">Fichas técnicas</h3>
+		                                <h2 class="ca-main">Vehículos</h2>
+		                                <h3 class="ca-sub">Aeronaves, lanchas...</h3>
 		                            </div>
 		                        </a>
 							</li>
