--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -20,10 +20,10 @@
 								<form id="frmReservarVuelo" action="accions/datos_reserva" method="post" class="hotel-search-form">
 									<div class="tm-form-inner">
 										<div class="form-group">
-											<%= select_tag(:cboOrigen, options_for_select([["-- Origen --", ""],["Bahía Solano", "BSC"],["Bogotá D.C.", "BOG"],["Cali", "CLO"],["Medellín", "EOH"],["Nuquí", "NQU"], ["Quibdó", "UIB"]]), class:"form-control" , required: :required)%>
+											<%= select_tag :cboOrigen, options_from_collection_for_select(@ciudadesAeropuertos, :id, :enter_nombreOficial), options={class:"form-control" , required: :required, prompt: "-- ORIGEN --"} %>
 							          	</div>
 										<div class="form-group">
-											<%= select_tag(:cboDestino, options_for_select([["-- Destino --", ""],["Bahía Solano", "BSC"],["Bogotá D.C.", "BOG"],["Cali", "CLO"],["Medellín", "EOH"],["Nuquí", "NQU"],["Quibdó", "UIB"]]), class:"form-control", required: :required)%> 
+											<%= select_tag :cboDestino, options_from_collection_for_select(@ciudadesAeropuertos, :id, :enter_nombreOficial), options={class:"form-control" , required: :required, prompt: "-- DESTINO --"} %> 
 							          	</div>										
 							          	<div class="form-group">
 							                <div class='input-group date' id='datetimepicker3'>
