--- a/app/views/aeropuertos/_form.html.erb
+++ b/app/views/aeropuertos/_form.html.erb
@@ -24,11 +24,11 @@
 		  	</div>
 		  	<div class="form-group">
 		    	<%= f.label "Ciudad*" %><br>
-		    	<%= f.text_field :aeropt_ciudadCdg, class: "form-control", required: :required %>
+		    	<%= f.select :aeropt_ciudadCdg, @ciudadesColombia.map{|reg| [reg.enter_nombreOficial, reg.id]}, prompt: "-- SELECCIONE --", class: "form-control", required: :required %>
 		  	</div>
 		  	<div class="form-group">
 		    	<%= f.label "Estado*" %><br>
-		    	<%= f.collection_select :aeropt_estadoRegistro, @estados, :first, :last, {selected: @aeropuerto.aeropt_estadoRegistro}, class: "form-control" %>
+		    	<%= f.select :aeropt_estadoRegistro, options_for_select(@estados.invert), {selected: @aeropuerto.aeropt_estadoRegistro}, class: "form-control" %>
 		  	</div>
 		</div>  	
 		<div id="tm-form-footer">
@@ -55,3 +55,9 @@
 		</div>
 	</div>
 <% end %>
+
+<script>
+	$(function(){
+		 $( document ).trigger( "page:load" );
+	});
+</script>
