--- a/app/assets/stylesheets/templatemo-style.css
+++ b/app/assets/stylesheets/templatemo-style.css
@@ -215,11 +215,17 @@ body { overflow-x: hidden; }
 }
 
 .button:hover{
-    background-image: -webkit-linear-gradient(top, rgba(255, 255, 255,.1), rgba(0, 0, 0, .1)); 
-    background-image: -moz-linear-gradient(top, rgba(255, 255, 255,.1), rgba(0, 0, 0, .1)); 
-    background-image: -ms-linear-gradient(top, rgba(255, 255, 255,.1), rgba(0, 0, 0, .1)); 
-    background-image: -o-linear-gradient(top, rgba(255, 255, 255,.1), rgba(0, 0, 0, .1)); 
-    background-image: linear-gradient(top, rgba(255, 255, 255,.1), rgba(0, 0, 0, .1));
+    background-image: -webkit-linear-gradient(top, rgba(0, 0, 0,1), rgba(0, 0, 0, 1)); 
+    background-image: -moz-linear-gradient(top, rgba(0, 0, 0,1), rgba(0, 0, 0, 1)); 
+    background-image: -ms-linear-gradient(top, rgba(0, 0, 0,1), rgba(0, 0, 0, 1)); 
+    background-image: -o-linear-gradient(top, rgba(0, 0, 0,1), rgba(0, 0, 0, 1)); 
+    background-image: linear-gradient(top, rgba(0, 0, 0,1), rgba(0, 0, 0, 1));
+    color:white;
+    text-shadow: 0 -1px 0 rgba(0,0,0,1); 
+}
+
+.button:hover::before{
+	text-shadow: 0 -1px 0 rgba(0,0,0,1);
 }
 
 .button:active{ 
@@ -456,6 +462,12 @@ body { overflow-x: hidden; }
 .section-footer{
 	margin-top:20px;
 }
+
+/*input:invalid,
+input:out-of-range {
+    border-color:hsl(0, 50%, 50%);
+    background:hsl(0, 50%, 90%);
+}*/
 
 /*http://cssdeck.com/labs/different-css3-box-shadows-effects*/
 /*==================================================
@@ -1374,4 +1386,90 @@ hr.vivo{border-top: 3px solid #ffff00; background-color:white; height:2px; margi
 
 @media screen and (max-width: 400px) {
 	.tm-section-title {	font-size: 28px; }
+}
+
+/**** LOADING ****/
+
+
+
+@keyframes loading {
+   0% {
+        transform: rotate(0deg);
+   }
+   25%{
+     transform: rotate(160deg);
+   }
+   50%{
+    transform: rotate(0deg);
+   }
+   75%{
+    transform: rotate(160deg);
+   }
+   100% {
+    transform: rotate(0deg);
+   };
+}
+
+.loading { 
+  background-color: rgba(0,0,0,0.8);
+  border-radius: 50%;
+  margin: 5px auto;
+  animation: loading 5s infinite linear;
+  pointer-events:none;
+  display:block;
+}
+
+.spin-1{
+  	border: 5px solid #c00353 ;
+  	border-top: 5px solid transparent;
+  	border-left: 5px solid transparent;
+  	width: 120px;
+  	height: 120px; 
+  	z-index: 9999999;
+  	position: fixed;
+  	left:50%;
+  	top: 50%;
+	-webkit-transition: opacity 400ms ease-in;
+	-moz-transition: opacity 400ms ease-in;
+	transition: opacity 400ms ease-in;
+  
+}
+
+.spin-2{
+  border: 5px solid #05bbc3 ;
+  border-top: 5px solid transparent;
+  border-left: 5px solid transparent;
+  width: 100px;
+  height: 100px;
+  animation-delay: 1s;
+}
+.spin-3{
+  border: 5px solid #d2d947 ;
+  border-top: 5px solid transparent;
+  border-left: 5px solid transparent;
+  width: 80px;
+  height: 80px; 
+  animation-delay: 1s;
+}
+.spin-4{
+  border: 5px solid #f2a342 ;
+  border-top: 5px solid transparent;
+  border-left: 5px solid transparent;
+  width: 60px;
+  height: 60px; 
+  animation-delay: 1s;
+}
+.spin-5{
+  border: 5px solid #f34d51 ;
+  border-top: 5px solid transparent;
+  border-left: 5px solid transparent;
+  width: 40px;
+  height: 40px; 
+  animation-delay: 1s;
+}
+.spin-6{
+  border: 5px solid #fff ;
+  width: 20px;
+  height: 20px; 
+  animation-delay: 1s;
 }
