--- a/app/views/aeropuertos/_form.html.erb
+++ b/app/views/aeropuertos/_form.html.erb
@@ -24,7 +24,7 @@
 		  	</div>
 		  	<div class="form-group">
 		    	<%= f.label "Ciudad*" %><br>
-		    	<%= f.select :aeropt_ciudadCdg, @ciudadesColombia.map{|reg| [reg.enter_nombreOficial, reg.id]}, prompt: "-- SELECCIONE --", class: "form-control", required: :required %>
+		    	<%= f.select :aeropt_ciudadCdg, @ciudadesColombia.map{|reg| [reg.enter_nombreCorto, reg.id]}, {}, options_html={class:"form-control", prompt: "-- SELECCIONE --", required: :required} %>
 		  	</div>
 		  	<div class="form-group">
 		    	<%= f.label "Estado*" %><br>
