--- a/app/views/empresas/_form.html.erb
+++ b/app/views/empresas/_form.html.erb
@@ -21,48 +21,48 @@
 			    <% unless @empresa.empr_documentoIdentidad.nil? %>
 			    	<% tipoDocumEmpresa = @empresa.empr_documentoIdentidad[-2,2] %>
 			    <% end %>
-			    <%= select_tag(:tipoIdentificacion, options_for_select(@tiposIdentEmpresa.invert, tipoDocumEmpresa), prompt: "-- SELECCIONE --") %>
+			    <%= select_tag(:tipoIdentificacion, options_for_select(@tiposIdentEmpresa.invert, tipoDocumEmpresa), options={class:"form-control", prompt: "-- SELECCIONE --"}) %>
 			</div>
 			<div class="form-group">
 			    <%= f.label :empr_documentoIdentidad, "Número Docum. Identidad" %><br>
-			    <%= text_field_tag(:numeroIdentificacion, @empr_numeroIdentidad, options={required: :required}) %>
+			    <%= text_field_tag(:numeroIdentificacion, @empr_numeroIdentidad, options={class:"form-control", required: :required}) %>
 			    <%= f.hidden_field :empr_documentoIdentidad %>
 			</div>
 			  <div class="form-group">
 			    <%= f.label :empr_razonSocial, "Razón Social*" %><br>
-			    <%= f.text_field :empr_razonSocial, options={size: 60, required: :required} %>
+			    <%= f.text_field :empr_razonSocial, options={class:"form-control", size: 60, required: :required} %>
 			  </div>
 			  <div class="form-group">
 			    <%= f.label :empr_nombreCorto, "Nombre Corto*" %><br>
-			    <%= f.text_field :empr_nombreCorto, options={size: 60, required: :required} %>
+			    <%= f.text_field :empr_nombreCorto, options={class:"form-control", size: 60, required: :required} %>
 			  </div>			  
 			  <div class="form-group">
 			    <%= f.label :empr_tipoEmpresa, "Tipo De Empresa" %><br>
-			    <%= f.select :empr_tipoEmpresa, options_for_select(@tiposEmpresa.invert, @empresa.empr_tipoEmpresa), prompt: "-- SELECCIONE --" %>
+			    <%= f.select :empr_tipoEmpresa, options_for_select(@tiposEmpresa.invert, @empresa.empr_tipoEmpresa), {}, options_html={class:"form-control", prompt: "-- SELECCIONE --"} %>
 			  </div>
 			  <div class="form-group">
 			    <%= f.label :empr_sectorEconomico, "Tipo de Capital" %><br>
-			    <%= f.select :empr_sectorEconomico, options_for_select(@tiposCapital.invert, @empresa.empr_sectorEconomico), prompt: "-- SELECCIONE --" %>
+			    <%= f.select :empr_sectorEconomico, options_for_select(@tiposCapital.invert, @empresa.empr_sectorEconomico), {}, options_html={class:"form-control", prompt: "-- SELECCIONE --"} %>
 			  </div>
 			  <div class="form-group">
 			    <%= f.label :empr_docIdentReprLegal,"Representante Legal" %><br>
-			    <%= f.text_field :empr_docIdentReprLegal, options={size: 60} %>
+			    <%= f.text_field :empr_docIdentReprLegal, options={class:"form-control", size: 60} %>
 			  </div>
 			  <div class="form-group">
 			    <%= f.label :empr_sitioWeb, "Sitio Web" %><br>
-			    <%= f.url_field :empr_sitioWeb, options={size: 60} %>
+			    <%= f.url_field :empr_sitioWeb, options={class:"form-control", size: 60} %>
 			  </div>
 			  <div class="form-group">
 			    <%= f.label :empr_correoElectronico, "Correo Electrónico" %><br>
-			    <%= f.email_field :empr_correoElectronico, options={size: 60} %>
+			    <%= f.email_field :empr_correoElectronico, options={class:"form-control", size: 60} %>
 			  </div>
 			  <div class="form-group">
 			    <%= f.label :empr_otrosDatos, "Otros Datos" %><br>
-			    <%= f.text_field :empr_otrosDatos, options={size: 60} %>
+			    <%= f.text_field :empr_otrosDatos, options={class:"form-control", size: 60} %>
 			  </div>
 			  <div class="form-group">
 			    <%= f.label :empr_estadoRegistro, "Estado*" %><br>
-			    <%= f.select(:empr_estadoRegistro, options_for_select(@estados.invert)) %>
+			    <%= f.select(:empr_estadoRegistro, options_for_select(@estados.invert), {}, options_html={class:"form-control"}) %>
 			  </div>
 		</div>
 		<div id="tm-form-footer">
@@ -73,6 +73,7 @@
 						$("#cmd_aceptar").click(function(e){
 							var nroIdentidadEmpresa;
 							nroIdentidadEmpresa = $("#numeroIdentificacion").val() + $("#tipoIdentificacion").val();
+							nroIdentidadEmpresa = nroIdentidadEmpresa.replace(/ /g, '');
 							$("#empresa_empr_documentoIdentidad").val(nroIdentidadEmpresa);
 							
 							<% if params[:action] == "edit" then %>
