--- a/app/views/empresas/buscar_datos_empresa.js.erb
+++ b/app/views/empresas/buscar_datos_empresa.js.erb
@@ -1,12 +1,18 @@
-<% unless params[:id].blank? || params[:dato_requerido].blank? || params[:nombre_control].blank? %>
-	var varDatoEmpresa;
+<% unless params[:id].blank? %>
 	<% empresa = Empresa.where(empr_documentoIdentidad: "#{params[:id]}").take %>
 	<% unless empresa.nil? %>
-		<% case params[:dato_requerido] %>
-			<% when "razon_social" %>
-				varDatoEmpresa = "<%= empresa.empr_nombreCorto %>";
+		<% hshDatosControl = params[:datos_control] %>
+		<% hshDatosControl.each do |key, value| %>
+			<% puts key + " - " + value %>
+			<% case key %>
+				<% when "razon_social" %>
+					$("#<%= value %>").val("<%= empresa.empr_nombreCorto %>");
+				<% when "sucursales_empresa" %>
+					<% sucursales = SucursalEmpresa.where("empr_documentoIdentidad = '#{params[:id]}' AND sucEmp_estadoRegistro = 'A'").order(:sucEmpr_nombreSucursal)%>
+					<% sucursales = sucursales.map{|a| [a.sucEmpr_nombreSucursal, a.id]}.insert(nil.to_f, "-- SELECCIONE --") %>
+					$("#<%= value %>").html("<%= escape_javascript(options_for_select(sucursales)) %>");
+			<% end %>
 		<% end %>
-		$("#<%= params[:nombre_control]%>").val(varDatoEmpresa);
-	<% end %>
+	<% end %>	
 <% end %>
 	
