--- a/app/views/personas/index.html.erb
+++ b/app/views/personas/index.html.erb
@@ -29,8 +29,8 @@
   					<tbody>
 						<% @personas.each do |persona| %>
 					      <tr>
-					        <td><%= persona.pers_documentoIdentidad %></td>
-					        <td><%= persona.pers_nombreCompleto %></td>
+					        <td><%= persona.pers_documentoIdentidad[-2, 2] + " " +  persona.pers_documentoIdentidad[0, persona.pers_documentoIdentidad.length - 2]  %></td>
+					        <td><%= persona.pers_nombres.to_s + " " + persona.pers_apellidos.to_s %></td>
 					        <td><%= persona.pers_telefonoPersonal1 %></td>
 					        <td><%= persona.pers_correoElectrPersonal %></td>
 					        <td><%= @estados[persona.pers_estadoRegistro] %></td>
@@ -69,7 +69,7 @@
 			    table = $('#indexTable').DataTable();
 			}
 			else {
-			    table = $('#indexTable').DataTable( {
+			    	table = $('#indexTable').DataTable( {
 			        pagingType: "full_numbers"
 			    } );
 			}
@@ -77,6 +77,7 @@
 		
 	$(function() {
 		$('#indexTable').DataTable({
+			
     		"pagingType": "full_numbers",
 			"aoColumns" : [
 							{ sWidth : "45%" },
